tests/integration/fixtures/laugh/error/배열이_아닌_대상에_인덱스_사용.laugh
변수 x = 10;
출력 x[0];
